@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -24,6 +24,7 @@ import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.astro.internal.model.SeasonName;
 import org.openhab.binding.astro.internal.model.ZodiacSign;
 import org.openhab.core.i18n.TranslationProvider;
 import org.openhab.core.ui.icon.IconProvider;
@@ -47,7 +48,9 @@ import org.slf4j.LoggerFactory;
 public class AstroIconProvider implements IconProvider {
     private static final String DEFAULT_LABEL = "Astro Icons";
     private static final String DEFAULT_DESCRIPTION = "Icons provided for the Astro Binding";
-    private static final String ZODIAC_ICON = "zodiac";
+    private static final String ZODIAC_SET = "zodiac";
+    private static final String SEASON_SET = "season";
+    private static final Set<String> ICON_SETS = Set.of(SEASON_SET, ZODIAC_SET);
 
     private final Logger logger = LoggerFactory.getLogger(AstroIconProvider.class);
     private final TranslationProvider i18nProvider;
@@ -79,18 +82,23 @@ public class AstroIconProvider implements IconProvider {
 
     @Override
     public @Nullable Integer hasIcon(String category, String iconSetId, Format format) {
-        return Format.SVG.equals(format) && iconSetId.equals(BINDING_ID) && category.equals(ZODIAC_ICON) ? 0 : null;
+        return Format.SVG.equals(format) && iconSetId.equals(BINDING_ID) && ICON_SETS.contains(category) ? 0 : null;
     }
 
     @Override
     public @Nullable InputStream getIcon(String category, String iconSetId, @Nullable String state, Format format) {
-        String iconName = "icon/%s.svg".formatted(category);
-        if (category.equals(ZODIAC_ICON) && state != null) {
+        String iconName = String.format(Locale.ROOT, "icon/%s.svg", category);
+        if (ICON_SETS.contains(category) && state != null) {
             try {
-                var sign = ZodiacSign.valueOf(state);
-                iconName = iconName.replace(".", "-%s.".formatted(sign.name().toLowerCase(Locale.US)));
-            } catch (IllegalArgumentException ignore) {
+                Enum<?> stateEnum = switch (category) {
+                    case ZODIAC_SET -> ZodiacSign.valueOf(state);
+                    case SEASON_SET -> SeasonName.valueOf(state);
+                    default -> throw new IllegalArgumentException("Category of icon not found: %s".formatted(category));
+                };
+                iconName = iconName.replace(".", "-%s.".formatted(stateEnum.name().toLowerCase(Locale.US)));
+            } catch (IllegalArgumentException e) {
                 // Invalid state for the icon set, we'll remain on default icon
+                logger.warn("Error retrieving icon name '{}' - using default: {}", state, e.getMessage());
             }
         }
 
